<resources>
    <string name="app_name">AndroidVocabulary</string>
    <string name="create_car2">Create Car2</string>
    <string name="create_car1">Create Car1</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="cherry">Cherry</string>
    <string name="changeText">ChangeText</string>
    <string name="today_s_date">Todays date</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="image2">image2</string>
    <string name="image1">image1</string>
    <string name="name">Name</string>
</resources>